# draft_pkg

./: CMakeLists.txt  package.xml
executable/: ReadMe.md  tf_to_path
include/: cvui.h  opencv_cvui.h  point_cloud_trans.h
launch/: read_image_to_ros.launch
scripts/: image_saver.py  image_saver_gray.py  image_shower.py  image_to_ros.py  iplus_servo_test.py  matplotlib_tools.py  modify_depth_camera_extrinsic.m  polygon_publisher.py  python_draft.py  search_and_replace.py
scripts/iplus_servo/: icp2d_teching.py  icp3d_action.py  icp3d_mapping.py  icp3d_teaching.py  icp3d_teaching_and_action.py  iplus_servo_test.py  send_icp2d.py  send_to_point.py
src/: MVG_codes.cpp  boost_eigen_test.cpp  boost_filesystem.cpp  depth_image_to_pointcloud.cpp  nlohmann_test.cpp  opencv_cvui.cpp  pcd_to_pointcloud.cpp  pcl_icp.cpp  pcl_ransac_line.cpp  point_cloud_trans.cpp  process_ifm.cpp  read_image_to_ros.cpp  read_pbstream.cpp  ros_imu_angle.cpp  ros_test.cpp  video_to_ros.cpp
src/kitti/: kitti_bin2pcd.cpp
